# DFD-HEAT

./: CLAUDE.md  CMakeLists.txt  build.sh  install_dependencies.sh
include/: AxisEntity.h  BlenderCameraController.h  BoxObject.h  Collection.h  CrosshairsEntity3D.h  Custom3DWindow.h  GridEntity.h  MainWindow.h  PropertiesPanel.h  SceneHierarchyPanel.h  SceneObject.h  Viewport3D.h  ViewportController.h
include/auth/: AuthManager.h
include/entities/: CrosshairsOverlay.h
include/mesh/: MeshData.h
include/scene/: BoxObject.h  ModeManager.h  ObjectManager.h  SceneObject.h  SelectionManager.h
include/viewport/: ViewportSettings.h
src/: AuthManager.cpp  AxisEntity.cpp  BoxObject.cpp  Collection.cpp  CrosshairsEntity3D.cpp  CrosshairsOverlay.cpp  Custom3DWindow.cpp  GridEntity.cpp  MainWindow.cpp  MeshData.cpp  ModeManager.cpp  ObjectManager.cpp  PropertiesPanel.cpp  SceneHierarchyPanel.cpp  SceneObject.cpp  SelectionManager.cpp  Viewport3D.cpp  Viewport3D_broken.cpp  Viewport3D_debug.cpp  ViewportController.cpp  ViewportSettings.cpp  main.cpp
src/auth/: AuthManager.cpp
src/core/: main.cpp
src/entities/: AxisEntity.cpp  CrosshairsEntity3D.cpp  CrosshairsOverlay.cpp  GridEntity.cpp
src/mesh/: MeshData.cpp
src/scene/: BoxObject.cpp  Collection.cpp  ModeManager.cpp  ObjectManager.cpp  SceneObject.cpp  SelectionManager.cpp
src/ui/: MainWindow.cpp  PropertiesPanel.cpp  SceneHierarchyPanel.cpp
src/viewport/: Custom3DWindow.cpp  Viewport3D.cpp  ViewportController.cpp  ViewportSettings.cpp
